--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,9 @@ description: >
 Application Developer | Incident Responder
 	<br>
 	<a href= "https://www.linkedin.com/in/ayobami-lawani-269a986b/">
-	<img src="https://img.shields.io/badge/linkedin-%230077B5.svg?style=for-the-badge&logo=linkedin&logoColor=white>
+	<img src="https://img.shields.io/badge/linkedin-%230077B5.svg?style=for-the-badge&logo=linkedin&logoColor=white">
 	</a>
 	<a href="mailto:ayobami.lawani@gmail.com">
-	<img alt="Gmail" src="https://img.shields.io/badge/Gmail-D14836?style=for-the-badge&logo=gmail&logoColor=white>
+	<img alt="Gmail" src="https://img.shields.io/badge/Gmail-D14836?style=for-the-badge&logo=gmail&logoColor=white">
 	</a>
 theme: jekyll-theme-minimal
