--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 title: Ayobami Lawani
+logo: "/Ayo.jpeg"
 description: >
 	<br> 
 Application Developer | Incident Responder
@@ -10,5 +11,3 @@ Application Developer | Incident Responder
 	<img alt="Gmail" src="https://img.shields.io/badge/Gmail-D14836?style=for-the-badge&logo=gmail&logoColor=white">
 	</a>
 theme: jekyll-theme-minimal
-
-
