--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
+# config.yml
+theme: jekyll-theme-minimal
 title: Ayobami Lawani
 logo: "/Ayo.png"
 description: >
@@ -10,4 +12,3 @@ Application Developer | Incident Responder
 	<a href="mailto:ayobami.lawani@gmail.com">
 	<img alt="Gmail" src="https://img.shields.io/badge/Gmail-D14836?style=for-the-badge&logo=gmail&logoColor=white">
 	</a>
-theme: jekyll-theme-minimal
